// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`transformations 1`] = `
{
  "officerPseudonymizedId": "hashed-so1",
  "vitalsMetrics": [
    {
      "metric30DDelta": -7,
      "metricId": "timely_contact",
      "metricValue": 87,
    },
    {
      "metric30DDelta": -4,
      "metricId": "timely_risk_assessment",
      "metricValue": 99,
    },
  ],
}
`;

exports[`transformations 2`] = `
{
  "officerPseudonymizedId": "hashed-so2",
  "vitalsMetrics": [
    {
      "metric30DDelta": -1,
      "metricId": "timely_contact",
      "metricValue": 57,
    },
    {
      "metric30DDelta": -1.7,
      "metricId": "timely_risk_assessment",
      "metricValue": 86,
    },
  ],
}
`;

exports[`transformations 3`] = `
{
  "officerPseudonymizedId": "hashed-so3",
  "vitalsMetrics": [
    {
      "metric30DDelta": 1.2,
      "metricId": "timely_contact",
      "metricValue": 31,
    },
    {
      "metric30DDelta": 0.7,
      "metricId": "timely_risk_assessment",
      "metricValue": 97,
    },
  ],
}
`;

exports[`transformations 4`] = `
{
  "officerPseudonymizedId": "hashed-so4",
  "vitalsMetrics": [
    {
      "metric30DDelta": 3.4,
      "metricId": "timely_contact",
      "metricValue": 22,
    },
    {
      "metric30DDelta": 0.9,
      "metricId": "timely_risk_assessment",
      "metricValue": 98,
    },
  ],
}
`;

exports[`transformations 5`] = `
{
  "officerPseudonymizedId": "hashed-so5",
  "vitalsMetrics": [
    {
      "metric30DDelta": -3,
      "metricId": "timely_contact",
      "metricValue": 50,
    },
    {
      "metric30DDelta": -5.9,
      "metricId": "timely_risk_assessment",
      "metricValue": 89,
    },
  ],
}
`;

exports[`transformations 6`] = `
{
  "officerPseudonymizedId": "hashed-so8",
  "vitalsMetrics": [
    {
      "metric30DDelta": -0.2,
      "metricId": "timely_contact",
      "metricValue": 22,
    },
    {
      "metric30DDelta": 1,
      "metricId": "timely_risk_assessment",
      "metricValue": 90,
    },
  ],
}
`;

exports[`transformations 7`] = `
{
  "officerPseudonymizedId": "hashed-so6",
  "vitalsMetrics": [
    {
      "metric30DDelta": 5.9,
      "metricId": "timely_contact",
      "metricValue": 79,
    },
    {
      "metric30DDelta": 0,
      "metricId": "timely_risk_assessment",
      "metricValue": 100,
    },
  ],
}
`;

exports[`transformations 8`] = `
{
  "officerPseudonymizedId": "hashed-so7",
  "vitalsMetrics": [
    {
      "metric30DDelta": 1.5,
      "metricId": "timely_contact",
      "metricValue": 89,
    },
    {
      "metric30DDelta": -3.4,
      "metricId": "timely_risk_assessment",
      "metricValue": 79,
    },
  ],
}
`;
